Fix img svg bug on IE

--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -741,7 +741,8 @@ td:first-child span {
 .quinary tbody tr:not(.itemActive):hover td     { background-color: rgba(255, 149, 189, 0.1); }
 
 .table-icon {
-  width: 25px;
+  min-width: 25px;
+  max-width: 25px;
   margin-right: 5px;
   vertical-align: bottom;
 }
